Carregar json e serializar ele, alguns ajustes nas entidades

--- a/CodeChallengeGrupoZap.Service/CodeChallengeGrupoZap.Service.csproj
+++ b/CodeChallengeGrupoZap.Service/CodeChallengeGrupoZap.Service.csproj
@@ -1,5 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\CodeChallengeGrupoZap.Domain\CodeChallengeGrupoZap.Domain.csproj" />
+    <ProjectReference Include="..\CodeChallengeGrupoZap.Repository\CodeChallengeGrupoZap.Repository.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
