--- a/CodeChallengeGrupoZap/appsettings.json
+++ b/CodeChallengeGrupoZap/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Urls":{
+    "Source-2.json": "http://grupozap-code-challenge.s3-website-us-east-1.amazonaws.com/sources/source-2.json"
+  }
 }
