--- a/CodeChallengeGrupoZap.Repository/CodeChallengeGrupoZap.Repository.csproj
+++ b/CodeChallengeGrupoZap.Repository/CodeChallengeGrupoZap.Repository.csproj
@@ -1,5 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\CodeChallengeGrupoZap.Domain\CodeChallengeGrupoZap.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
